trunk/Archive2/c0/98be8af23da70a/output
main.cpp:2:5: error: use of undeclared identifier 'cout'
    cout << "shonan" << endl;
    ^
main.cpp:2:25: error: use of undeclared identifier 'endl'
    cout << "shonan" << endl;
                        ^
2 errors generated.
