trunk/Archive2/c0/98be8af23da70a/main.cpp
int main() {
    cout << "shonan" << endl;
}